--- a/index.html
+++ b/index.html
@@ -1515,6 +1515,8 @@
             <div class="cosmic-copyright">
                 © Quantum Odyssey Research Institute | All wisdom synthesized from primary sources<br>
                 Original synthesis and philosophical architecture by <span class="copyright-by">SirFree33</span><br><br>
+                Links to external websites are provided for convenience only. We are not responsible for the content, accuracy, 
+                or practices of any third-party sites linked from our website.
                 This site complies with Google AdSense policies with original, high-quality philosophical and scientific content.
             </div>
         </div>
