--- a/index.html
+++ b/index.html
@@ -2435,7 +2435,8 @@
                 </div>
             </div>
             
-            <a href="#" class="portal-button">Enter the Library Portal</a>
+            <!-- THIS IS THE ONLY BUTTON THAT LINKS TO THE SEPARATE PAGE -->
+            <a href="library.html" class="portal-button" target="_blank" rel="noopener noreferrer">Enter the Library Portal</a>
             
             <div style="margin-top: 4rem;">
                 <p style="color: var(--ancient-parchment); opacity: 0.8; font-size: 0.95rem;">
