--- a/index.html
+++ b/index.html
@@ -3172,7 +3172,7 @@
                     
                     <div class="disclaimer-box">
                         <h4 class="disclaimer-title">Academic Disclaimer</h4>
-                        <p class="disclaimer-text">This work represents a philosophical synthesis and theoretical framework. While grounded in scientific and historical sources, it includes speculative connections intended to provoke thought and exploration across 40,000 years of human consciousness evolution. User discretion: Users are advised to use the links at their own risk. The site owner is not responsible for the content of external websites linked to or referenced.</p>
+                        <p class="disclaimer-text">This work represents a philosophical synthesis and theoretical framework. While grounded in scientific and historical sources, it includes speculative connections intended to provoke thought and exploration across 40,000 years of human consciousness evolution.</p>
                     </div>
                 </div>
             </div>
@@ -3180,7 +3180,7 @@
             <div class="quantum-divider"></div>
             
             <div class="cosmic-copyright">
-                <p>© 2026 Quantum Odyssey Research Institute. All content is provided for educational and philosophical exploration.</p>
+                <p>© 2026 Quantum Odyssey Research Institute. All content is provided for educational and philosophical exploration. User discretion: Users are advised to use the links at their own risk. The site owner is not responsible for the content of external websites linked to or referenced.</p>
                 <p>Created with <span style="color: var(--nebula-teal);">♥</span> by <span class="copyright-by">SirFree33</span> | Version 3.0.1 | Last Updated: January 2026</p>
                 <p style="margin-top: 1rem; font-size: 0.85rem; opacity: 0.6;">This work is licensed under a <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" style="color: var(--nebula-teal); text-decoration: none;" target="_blank" rel="noopener noreferrer">Creative Commons Attribution-NonCommercial-ShareAlike 4.0 International License</a>.</p>
             </div>
