--- a/index.html
+++ b/index.html
@@ -3131,7 +3131,7 @@
                     <div class="contact-info">
                         <p>The Quantum Odyssey represents 20+ years of research synthesizing 40,000 years of human wisdom—from Paleolithic cave art to quantum physics. This living document is continually updated as new insights emerge.</p>
                         <a href="mailto:quantumodyssey@research.institute" class="contact-email">
-                            <i class="fas fa-envelope"></i> quantumodyssey@research.institute
+                            <i class="fas fa-envelope"></i> hyping.mrt@tutamail.com
                         </a>
                     </div>
                     
